# cmake-starter

./: .gitignore  CMakeLists.txt  README.md  debug.sh
src/: main.c
src/core/: cbase.c  cbase.h  clist.c  clist.h
